--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
 
 body {
     margin: 0;
+    display: flex;
+    flex-direction: column;
     font-family: Helvetica, Arial, sans-serif;
  }
 
@@ -65,6 +67,28 @@ img {
     border-radius: 8px;
     border: 1px solid #c5c0b8;
  }
+
+.animal {
+    display: block;
+    margin: 0 auto;
+    width: 150px;
+    height: 100px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+}
+
+.project {
+    padding-bottom: 215px;
+}
+
+.project-one {
+    font-size: 16px;
+}
+
+.p-one-detail {
+    font-size: 14px;
+}
 
 .map {
     width: 300px;
@@ -175,17 +199,48 @@ header h2 {
 footer {
     background-color: #403933;
  }
+
+ hr {
+    border: 1px solid #403933;
+    width: 100%;
+ }
       
 section {
     padding: 0 15%;
     margin: 20px 0;
  }
       
-img { 
-    width: 100%;	
+img {
+    display: block;
+    margin: 0 auto;
+    width: 500px;
+    height: 650px;
     border-radius: 8px;
     border: 1px solid #c5c0b8;
  } 
+
+ .animal {
+    display: block;
+    margin: 0 auto;
+    width: 450px;
+    height: 300px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+}
+
+.project {
+    padding-bottom: 280px;
+}
+
+.project-one {
+    font-size: 24px;
+}
+
+.p-one-detail {
+    font-size: 20px;
+    text-align: center;
+}
 
 .map {
     width: 535px;
@@ -214,7 +269,7 @@ p, li {
 .p-home {
     text-align: center;
     font-family: 'Montserrat', sans-serif;
-    font-size: 30px;
+    font-size: 24px;
     line-height: 1.5em;
     margin-bottom: 10px;
 }
@@ -293,12 +348,15 @@ footer p {
     .menu a {
         border: 1px solid #403933;
         margin-left: 20px;
-        margin-right: 5px;
+        margin-right: 10px;
         padding: 20px;
      }
           
     footer {
         background-color: #403933;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
         margin-top: 50px;
      }
           
@@ -309,10 +367,18 @@ footer p {
     img { 
         display: block;
         margin: 0 auto;
-        width: 50%;	
+        width: 500px;
+        height: 650px;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: 50% 50%;
         border-radius: 8px;
         border: 1px solid #c5c0b8;
      }
+
+    .project {
+        padding-bottom: 335px;
+    }
     
     .map {
         display: block;
@@ -322,7 +388,7 @@ footer p {
     }
 
     .google-maps {
-        margin-bottom: 80px;
+        padding-bottom: 50px;
     }
           
     h1, h2, h3 {
@@ -336,7 +402,7 @@ footer p {
     h2 { font-size: 34px; }
     h3 { font-size: 18px; }
     
-    p, li {
+    p {
         text-align: left;
         font-family: 'Montserrat', sans-serif;
         font-size: 20px;
@@ -344,9 +410,13 @@ footer p {
         margin-bottom: 0;
      }
 
-    ol {
+    .contact-links > li {
+        width: 600px;
+        margin: 0 auto;
+    }
+
+     li, li::marker {
         text-align: center;
-        margin-left: 650px;
         padding-bottom: 50px;
     }
     
@@ -359,11 +429,11 @@ footer p {
     }
 
     .p-contact {
-        margin-left: 555px;
+        text-align: center;
     }
     
     .p-about {
-        margin-bottom: 352px;
+        padding-bottom: 148px;
     }
           
     a {
