--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ img {
 
 .project {
     padding-bottom: 215px;
+    text-align: center;
 }
 
 .map {
@@ -88,6 +89,18 @@ button {
     margin-top: 5px;
     margin-bottom: 5px;
     padding: 5px;
+}
+
+.p-button {
+    display: inline;
+}
+
+.p-btn-one {
+    padding: 5px;
+}
+.p-btn-two {
+    padding: 5px;
+    width: 80px;
 }
 
 /*Text Based Styles*/
@@ -241,6 +254,7 @@ img {
 
 .project {
     padding-bottom: 280px;
+    text-align: center;
 }
 
 .map {
@@ -269,6 +283,14 @@ button {
     margin-top: 10px;
     margin-bottom: 10px;
     padding: 15px;
+}
+
+.p-button {
+    display: inline;
+}
+
+.p-btn-two {
+    width: 100px;
 }
 
 /*Text Based Styles*/
@@ -414,6 +436,7 @@ img {
 
 .project {
     padding-bottom: 335px;
+    text-align: center;
 }
 
 .map {
@@ -449,6 +472,14 @@ button {
     margin: 0 auto;
     margin-top: 5px;
     padding: 15px;
+}
+
+.p-button {
+    display: inline;
+}
+
+.p-btn-two {
+    width: 100px;
 }
 
 /*Text Based Styles*/
@@ -497,7 +528,7 @@ p {
 
 li, li::marker {
     text-align: center;
-    padding-bottom: 50px;
+    padding-bottom: 20px;
 }
 
 .p-home {
